# bytepatch

./: Cargo.toml  README.md  example.lua
bytepatch/: Cargo.toml  README
bytepatch_cli/: Cargo.toml
bytepatch_cli/src/: main.rs
bytepatch_core/: Cargo.toml  README
bytepatch_core/src/: lib.rs  lua.rs  utils.rs
bytepatch_core/src/lua/: constants.rs  instructions.rs
