[package]
name = "bytepatch_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: Replace this with `bytepatch`
bytepatch_core = {path = "../bytepatch_core"}
scroll = { version = "0.11.0", features = ["derive"] }
